--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Bakery</a>
-          <a class="dropdown-item" href="#">Floral</a>
+          <a class="dropdown-item" href="#">Flowers</a>
           <a class="dropdown-item" href="#">Merch</a>
 <!--           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a> -->
