--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,28 @@
-<h1>Hello</h1>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <%= image_tag('yumcookie.jpeg')%>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag('pastry.jpeg')%>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag('sunflowers.jpeg')%>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag('pie.jpeg')%>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag('cupcake.jpeg')%>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
