--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,8 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div align="center">
-        <%= link_to image_tag('quinn2.png', style: 'height:180px; width: 180px;'), root_path %>
-      </div>  
-
+        <%= link_to 'Quinn Pie', root_path, class: 'navbar-brand' %>  
+      </div>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav ml-auto mt-2 mt-md-0">
           <li class="nav-item">
