working on footer

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -24,7 +24,7 @@ body {
 
 .navbar-brand {
 	font-family: 'Pacifico', cursive;
-	font-size: 50px;
+	font-size: 55px;
 }
 
 .nav-item {
@@ -73,3 +73,10 @@ body {
 	color: white;
 }
 
+.footer {
+	background: teal;
+}
+
+.social-button {
+	padding: 30px;
+}
