--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -47,7 +47,7 @@
     <div class="col-lg-4 col-sm-12 mb-3">
       <br/>
       <h2>Join Our Mailing List</h2>
-      <p>Join the family! Stay up to date on new seasonal flavors, delicious recipes and offers.</p>
+      <p>Join the family! Stay up to date on new seasonal flavors, delicious recipes and special offers.</p>
       <br/>
       <h4 align="center"><%= link_to 'Subscribe', '#', :style=> 'color:#FFFFFF; border-style: solid;' %></h4>
     </div>
