--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
 
   <body>
@@ -16,7 +17,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div align="center">
-        <%= link_to 'Quinn Pie', root_path, class: 'navbar-brand' %>  
+        <%= link_to 'Quinn Pie', root_path, class: 'navbar-brand', style: 'color: #F8A13C; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;' %>  
       </div>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav ml-auto mt-2 mt-md-0">
@@ -42,11 +43,18 @@
       </div>
     </nav>
 
-
-
-
-
-
     <%= yield %>
+
+    <div class="footer">
+      <footer>
+        <div class="offset-1">
+        <br/>
+         <span class="fa fa-facebook-square fa-4x social-button"></span> 
+         <span class="fa fa-twitter-square fa-4x social-button"></span>
+         <span class="fa fa-instagram fa-4x social-button"></span> 
+        <br/>
+      </div>
+      </footer>
+    </div>    
   </body>
 </html>
