--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,22 +26,44 @@
   </a>
 </div>
 
-<br/>
-<br/>
 
-<!-- <div class="home-info">
-  <div class="row">
-    <div class="col-lg-6 col-sm-12">
-      <h3 align="center">Cookies, Cakes, Pies; Oh My!</h3>
+
+<div class="home">
+  <br/>
+  <br/>
+  <br/>
+  <div class="container">
+    <div class="row">
+      <div class="info col">
+        <br/>
+        <h2 align="center">Tour Our Bakery</h2>
+        <h3 style="color:black;">Find the perfect treat from out asssorment of fresh baked goodies</h3>
+        <br/>
+        <%= image_tag 'pastry2.jpeg', style: 'width:500px;height:600px;', class: 'img-fluid' %>
+        <br/>
+        <br/>
+        <div align="center">
+          <%= link_to 'Learn more', '#', class: "btn btn-primary" %>
+        </div>
+        <br/>
+      </div>
+      <div class="info col offset-1">
+        <br/>
+        <h2 align="center">Explore Our Flowers</h2><h3 style="color:black;">We offer pre-arranged assortments as well as custom options.</h3>
+        <br/>
+        <%= image_tag 'arrange.jpeg', style: 'width:500px;height:600px;', class: 'img-fluid' %>
+        <br/> 
+        <br/> 
+      </div>
+      <br/>  
     </div>
-    <div class="col-lg-6 col-sm-12">
-      <h3 align="center">Get lost in Flowers!</h3>
-    </div>
-  </div>   
-</div> --> 
+  </div>  
+  
+  <br/>
+  <br/>
+
 
 <div class="mail">
-  <br/>
   <br/>
   <div class="row col-8 offset-3">
     <div class="col-lg-4 col-sm-12 mb-3">
@@ -55,7 +77,9 @@
       <%= image_tag 'mail2.png', class: 'img-fluid' %>
     </div>
   </div>
-  <br/>
-  <br/>
-</div>      
+</div> 
+<br/>
+<br/>  
+</div>
+
 
