--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,16 +16,16 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div align="center">
-        <%= link_to 'Quinn Pie', root_path, class: 'navbar-brand', style: 'color: #F8A13C; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;' %>  
+      <div align="center" class="offset-1">
+        <%= link_to 'Quinn Pie', root_path, class: 'navbar-brand', style: 'color: #58F6C4; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;' %>  
       </div>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav ml-auto mt-2 mt-md-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="/about">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="/contact">Contact Us</a>
           </li>
           <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -48,11 +48,17 @@
     <div class="footer">
       <footer>
         <div class="offset-1">
-        <br/>
-         <span class="fa fa-facebook-square fa-4x social-button"></span> 
-         <span class="fa fa-twitter-square fa-4x social-button"></span>
-         <span class="fa fa-instagram fa-4x social-button"></span> 
-        <br/>
+        <div class="row">
+          <div class="col" align="center">
+           <span class="fa fa-facebook-square fa-4x social-button"></span> 
+           <span class="fa fa-twitter-square fa-4x social-button"></span>
+           <span class="fa fa-instagram fa-4x social-button"></span> 
+          </div>
+          <div class="col">
+            <br/>
+            <h2>Hello</h2>
+          </div> 
+        </div>     
       </div>
       </footer>
     </div>    
